# esp32_mqtt_test

./: CLAUDE.md  CMakeLists.txt  README.md  mosquitto_sub is a simple mqtt clie.txt  partitions.csv
.omc/state/: hud-state.json  hud-stdin-cache.json
components/freertos_cli/: CMakeLists.txt  FreeRTOS_CLI.c
main/: CMakeLists.txt  app_main.c
main/bsp/: bsp_gpio.c  bsp_gpio.h
main/drivers/: button.c  button.h  hwtimer.c  hwtimer.h  led.c  led.h  relay.c  relay.h
main/tasks/: config_cli.c  config_cli.h  config_nvs.c  config_nvs.h  console.c  console.h  swtimer.c  swtimer.h  task_ble.c  task_ble.h  task_button.c  task_button.h  task_comm.c  task_event.c  task_event.h  task_fota.c  task_fota.h  task_hwtimer.c  task_hwtimer.h  task_led.c  task_led.h  task_mqtt.c  task_mqtt.h  task_relay.c  task_relay.h  task_wifi.c  task_wifi.h
